# ChangeLog for sys-libs/uclibc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.91 2014/08/01 08:19:10 vapier Exp $

  01 Aug 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r11.ebuild:
  Stabilize for all.

*uclibc-0.9.33.2-r11 (27 Apr 2014)

  27 Apr 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r11.ebuild:
  Add fix from upstream for sys/mount.h updates #508522 by Anthony Basile.

  27 Apr 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r10.ebuild:
  Stabilize for all.

*uclibc-0.9.33.2-r10 (18 Feb 2014)

  18 Feb 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r10.ebuild:
  Add more pread/pwrite fixes from upstream #500382 by Steev Klimaszewski.

  02 Feb 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag from metadata.xml

  01 Feb 2014; Mike Frysinger <vapier@gentoo.org> -uclibc-0.9.28.3-r8.ebuild,
  -uclibc-0.9.30.1-r1.ebuild, -uclibc-0.9.30.1.ebuild, -uclibc-0.9.30.ebuild,
  -uclibc-0.9.33.1-r1.ebuild, -uclibc-0.9.33.1.ebuild:
  Drop really old versions we no longer support.

*uclibc-0.9.33.2-r9 (08 Jan 2014)

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r9.ebuild:
  Add fix from upstream for marking ll_tzname vars local #497466 by David
  Hendricks.

  25 Dec 2013; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r8.ebuild:
  Fast stabilize due to crasher in current stable #495256 by Anthony Basile.

*uclibc-0.9.33.2-r8 (24 Dec 2013)

  24 Dec 2013; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r8.ebuild:
  Update statfs64 patch from upstream #495256 by Anthony Basile.

*uclibc-0.9.33.2-r7 (22 Dec 2013)

  22 Dec 2013; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r7.ebuild:
  Add pread/pwrite fix #475920, eventfd fix #482866, and linux-headers fix
  #490008.

  22 Dec 2013; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r6.ebuild:
  Stabilize for all.
