@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/uclibc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.91 2014/08/01 08:19:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/uclibc/ChangeLog,v 1.92 2014/08/04 01:55:12 vapier Exp $
+
+*uclibc-0.9.33.2-r12 (04 Aug 2014)
+
+  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> +uclibc-0.9.33.2-r12.ebuild:
+  Pull in time.h updates to fix building w/latest udev.
 
   01 Aug 2014; Mike Frysinger <vapier@gentoo.org> uclibc-0.9.33.2-r11.ebuild:
   Stabilize for all.
